<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="io.agora.api.example.main.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_homeFragment_to_virtual_bg"
            app:enterAnim="@anim/slide_right_in"
            app:exitAnim="@anim/slide_left_out"
            app:popEnterAnim="@anim/slide_left_in"
            app:popExitAnim="@anim/slide_right_out"
            app:destination="@id/virtualBG" />
        <action
            android:id="@+id/action_homeFragment_to_beauty"
            app:enterAnim="@anim/slide_right_in"
            app:exitAnim="@anim/slide_left_out"
            app:popEnterAnim="@anim/slide_left_in"
            app:popExitAnim="@anim/slide_right_out"
            app:destination="@id/Beauty" />
        <action
            android:id="@+id/action_homeFragment_to_pvc"
            app:enterAnim="@anim/slide_right_in"
            app:exitAnim="@anim/slide_left_out"
            app:popEnterAnim="@anim/slide_left_in"
            app:popExitAnim="@anim/slide_right_out"
            app:destination="@id/pvc" />
        <action
            android:id="@+id/action_homeFragment_to_roi"
            app:enterAnim="@anim/slide_right_in"
            app:exitAnim="@anim/slide_left_out"
            app:popEnterAnim="@anim/slide_left_in"
            app:popExitAnim="@anim/slide_right_out"
            app:destination="@id/roi" />
        <action
            android:id="@+id/action_homeFragment_to_super_res"
            app:enterAnim="@anim/slide_right_in"
            app:exitAnim="@anim/slide_left_out"
            app:popEnterAnim="@anim/slide_left_in"
            app:popExitAnim="@anim/slide_right_out"
            app:destination="@id/super_res" />
        <action
            android:id="@+id/action_homeFragment_to_super_quality"
            app:enterAnim="@anim/slide_right_in"
            app:exitAnim="@anim/slide_left_out"
            app:popEnterAnim="@anim/slide_left_in"
            app:popExitAnim="@anim/slide_right_out"
            app:destination="@id/super_quality" />
        <action
            android:id="@+id/action_homeFragment_to_settings"
            app:enterAnim="@anim/slide_right_in"
            app:exitAnim="@anim/slide_left_out"
            app:popEnterAnim="@anim/slide_left_in"
            app:popExitAnim="@anim/slide_right_out"
            app:destination="@id/settings" />
        <action
            android:id="@+id/action_homeFragment_to_color_enhancement"
            app:enterAnim="@anim/slide_right_in"
            app:exitAnim="@anim/slide_left_out"
            app:popEnterAnim="@anim/slide_left_in"
            app:popExitAnim="@anim/slide_right_out"
            app:destination="@id/color_enhancement" />
        <action
            android:id="@+id/action_homeFragment_to_dark_light_enhancement"
            app:enterAnim="@anim/slide_right_in"
            app:exitAnim="@anim/slide_left_out"
            app:popEnterAnim="@anim/slide_left_in"
            app:popExitAnim="@anim/slide_right_out"
            app:destination="@id/dark_light_enhancement" />
        <action
            android:id="@+id/action_homeFragment_to_video_noise_reduction"
            app:enterAnim="@anim/slide_right_in"
            app:exitAnim="@anim/slide_left_out"
            app:popEnterAnim="@anim/slide_left_in"
            app:popExitAnim="@anim/slide_right_out"
            app:destination="@id/video_noise_reduction"
            />
        <action
            android:id="@+id/action_homeFragment_to_transparent_bg_transfer"
            app:enterAnim="@anim/slide_right_in"
            app:exitAnim="@anim/slide_left_out"
            app:popEnterAnim="@anim/slide_left_in"
            app:popExitAnim="@anim/slide_right_out"
            app:destination="@id/transparent_bg_transfer"
            />
        <action
            android:id="@+id/action_homeFragment_to_ai_noise_reduction"
            app:enterAnim="@anim/slide_right_in"
            app:exitAnim="@anim/slide_left_out"
            app:popEnterAnim="@anim/slide_left_in"
            app:popExitAnim="@anim/slide_right_out"
            app:destination="@id/ai_noise_reduction"
            />
        <action
            android:id="@+id/action_homeFragment_to_ai_echo_cancellation"
            app:enterAnim="@anim/slide_right_in"
            app:exitAnim="@anim/slide_left_out"
            app:popEnterAnim="@anim/slide_left_in"
            app:popExitAnim="@anim/slide_right_out"
            app:destination="@id/ai_echo_cancellation"
            />
        <action
            android:id="@+id/action_homeFragment_to_rhythm"
            app:enterAnim="@anim/slide_right_in"
            app:exitAnim="@anim/slide_left_out"
            app:popEnterAnim="@anim/slide_left_in"
            app:popExitAnim="@anim/slide_right_out"
            app:destination="@id/rhythm"
            />
        <action
            android:id="@+id/action_homeFragment_to_effect_3d"
            app:enterAnim="@anim/slide_right_in"
            app:exitAnim="@anim/slide_left_out"
            app:popEnterAnim="@anim/slide_left_in"
            app:popExitAnim="@anim/slide_right_out"
            app:destination="@id/effect3d"
            />
        <action
            android:id="@+id/action_homeFragment_to_lighting_3d"
            app:enterAnim="@anim/slide_right_in"
            app:exitAnim="@anim/slide_left_out"
            app:popEnterAnim="@anim/slide_left_in"
            app:popExitAnim="@anim/slide_right_out"
            app:destination="@id/lighting3d"
            />
        <action
            android:id="@+id/action_homeFragment_to_background_360"
            app:enterAnim="@anim/slide_right_in"
            app:exitAnim="@anim/slide_left_out"
            app:popEnterAnim="@anim/slide_left_in"
            app:popExitAnim="@anim/slide_right_out"
            app:destination="@id/background360"
            />
        <action
            android:id="@+id/action_homeFragment_to_virtual_headgear"
            app:enterAnim="@anim/slide_right_in"
            app:exitAnim="@anim/slide_left_out"
            app:popEnterAnim="@anim/slide_left_in"
            app:popExitAnim="@anim/slide_right_out"
            app:destination="@id/virtual_headgear"
            />
    </fragment>

    <fragment
        android:id="@+id/virtualBG"
        android:name="io.agora.api.example.examples.video.VirtualBgFragment"
        android:label="@string/virtul_bg"
        tools:layout="@layout/fragment_virtual_bg" />
    <fragment
        android:id="@+id/Beauty"
        android:name="io.agora.api.example.examples.video.beauty.BeautyFragment"
        android:label="@string/beauty"
        tools:layout="@layout/fragment_beauty"
        />
    <fragment
        android:id="@+id/pvc"
        android:name="io.agora.api.example.examples.video.PVCFragment"
        android:label="@string/pvc"
        tools:layout="@layout/fragment_pvc"
        />
    <fragment
        android:id="@+id/roi"
        android:name="io.agora.api.example.examples.video.ROIFragment"
        android:label="@string/roi"
        tools:layout="@layout/fragment_roi"
        />
    <fragment
        android:id="@+id/super_res"
        android:name="io.agora.api.example.examples.video.SuperResolutionFragment"
        android:label="@string/super_res"
        tools:layout="@layout/fragment_super_resolution"
        />
    <fragment
        android:id="@+id/super_quality"
        android:name="io.agora.api.example.examples.video.SuperQualityFragment"
        android:label="@string/super_quality"
        tools:layout="@layout/fragment_super_resolution"
        />
    <fragment
        android:id="@+id/settings"
        android:name="io.agora.api.example.main.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"
        />
    <fragment
        android:id="@+id/color_enhancement"
        android:name="io.agora.api.example.examples.video.ColorEnhancementFragment"
        android:label="@string/color_enhance"
        tools:layout="@layout/fragment_color_enhancement"
        />
    <fragment
        android:id="@+id/dark_light_enhancement"
        android:name="io.agora.api.example.examples.video.DarklightFragment"
        android:label="@string/dark_light_enhancement"
        tools:layout="@layout/fragment_dark_light_enhancement"
        />
    <fragment
        android:id="@+id/video_noise_reduction"
        android:name="io.agora.api.example.examples.video.VideoNoiseReductionFragment"
        android:label="@string/video_noise_reduction"
        tools:layout="@layout/fragment_video_noise_reduction"
        />
    <fragment
        android:id="@+id/transparent_bg_transfer"
        android:name="io.agora.api.example.examples.video.TransparentBgTransferFragment"
        android:label="@string/transparent_background_transfer"
        tools:layout="@layout/fragment_transparent_bg_transfer"
        />
    <fragment
        android:id="@+id/ai_noise_reduction"
        android:name="io.agora.api.example.examples.audio.AiNoiseReductionFragment"
        android:label="@string/ai_noise_reduction"
        tools:layout="@layout/fragment_ai_noise_reduction"
        />
    <fragment
        android:id="@+id/ai_echo_cancellation"
        android:name="io.agora.api.example.examples.audio.AiEchoCancellationFragment"
        android:label="@string/ai_echo_cancellation"
        tools:layout="@layout/fragment_ai_echo_cancellation"
        />
    <fragment
        android:id="@+id/rhythm"
        android:name="io.agora.api.example.examples.algorithmic.RhythmFragment"
        android:label="@string/rhythm"
        tools:layout="@layout/fragment_rhythm"
        />
    <fragment
        android:id="@+id/effect3d"
        android:name="io.agora.api.example.examples.algorithmic.Effect3DFragment"
        android:label="@string/effects_3d"
        tools:layout="@layout/fragment_effect_3d"
        />
    <fragment
        android:id="@+id/lighting3d"
        android:name="io.agora.api.example.examples.algorithmic.Lighting3DFragment"
        android:label="@string/lighting_3d"
        tools:layout="@layout/fragment_lighting_3d"
        />
    <fragment
        android:id="@+id/background360"
        android:name="io.agora.api.example.examples.algorithmic.Background360Fragment"
        android:label="@string/background_360"
        tools:layout="@layout/fragment_background_360"
        />
    <fragment
        android:id="@+id/virtual_headgear"
        android:name="io.agora.api.example.examples.algorithmic.VirtualHeadgearFragment"
        android:label="@string/virtual_headgear"
        tools:layout="@layout/fragment_virtual_headgear"
        />
</navigation>
