<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/mainFragment">
    <fragment
        android:id="@+id/mainFragment"
        android:name="io.agora.api.example.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_mainFragment_to_Ready"
            app:destination="@id/Ready" />

    </fragment>

    <fragment
        android:id="@+id/Ready"
        android:name="io.agora.api.example.ReadyFragment"
        android:label="Ready"
        tools:layout="@layout/fragment_ready_layout">

        <action
            android:id="@+id/action_mainFragment_to_joinChannelAudio"
            app:destination="@id/joinChannelAudio" />
        <action
            android:id="@+id/action_mainFragment_to_joinChannelVideo"
            app:destination="@id/joinChannelVideo" />
        <action
            android:id="@+id/action_mainFragment_to_joinChannelVideoByToken"
            app:destination="@id/joinChannelVideoByToken" />
        <action
            android:id="@+id/action_mainFragment_to_live_streaming"
            app:destination="@id/LiveStreaming" />
    </fragment>

    <fragment
        android:id="@+id/joinChannelAudio"
        android:name="io.agora.api.example.examples.basic.JoinChannelAudio"
        android:label="@string/item_joinaudio"
        tools:layout="@layout/fragment_joinchannel_audio" />
    <fragment
        android:id="@+id/joinChannelVideo"
        android:name="io.agora.api.example.examples.basic.JoinChannelVideo"
        android:label="@string/item_joinvideo"
        tools:layout="@layout/fragment_joinchannel_video" />
    <fragment
        android:id="@+id/joinChannelVideoByToken"
        android:name="io.agora.api.example.examples.basic.JoinChannelVideoByToken"
        android:label="@string/item_joinvideo_by_token"
        tools:layout="@layout/fragment_joinchannel_video_by_token" />
    <fragment
        android:id="@+id/LiveStreaming"
        android:name="io.agora.api.example.examples.advanced.LiveStreaming"
        android:label="@string/item_livestreaming"
        tools:layout="@layout/fragment_live_streaming" />
</navigation>
