<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="io.agora.api.example.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_virtual_bg"
            app:destination="@id/virtualBG" />
        <action
            android:id="@+id/action_homeFragment_to_beauty"
            app:destination="@id/Beauty" />
    </fragment>

    <fragment
        android:id="@+id/virtualBG"
        android:name="io.agora.api.example.examples.video.VirtualBgFragment"
        android:label="@string/virtul_bg"
        tools:layout="@layout/fragment_virtual_bg" />
    <fragment
        android:id="@+id/Beauty"
        android:name="io.agora.api.example.examples.video.BeautyFragment"
        android:label="@string/beauty"
        tools:layout="@layout/fragment_beauty"
        />

</navigation>
