<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ic_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="160dp"
        android:minWidth="160dp"
        android:src="@mipmap/labs_logo"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/iv_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="119dp"
        android:layout_height="28dp"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="#099DFD"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        android:layout_marginTop="16dp"/>

    <ScrollView
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.87"
        android:layout_height="280dp"
        android:background="@drawable/bg_rectangle_white"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        app:layout_constraintBottom_toTopOf="@+id/powered">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/user_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/setting_item_margin_left_right"
                android:layout_marginRight="@dimen/setting_item_margin_left_right"
                android:drawableLeft="@mipmap/ic_agreement"
                android:drawableRight="@drawable/ic_chevron_right"
                android:drawablePadding="8dp"
                android:layout_marginTop="30dp"
                android:textSize="15sp"
                android:textColor="#18191B"
                android:text="@string/user_agreement"/>
            <TextView
                android:id="@+id/user_info_collect_checklist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/setting_item_margin_left_right"
                android:layout_marginRight="@dimen/setting_item_margin_left_right"
                android:drawableLeft="@mipmap/ic_agreement"
                android:drawableRight="@drawable/ic_chevron_right"
                android:drawablePadding="8dp"
                android:layout_marginTop="@dimen/setting_item_margin_top"
                android:textSize="15sp"
                android:textColor="#18191B"
                android:text="@string/personal_info_collect_checklist"/>
            <TextView
                android:id="@+id/third_party_data_share_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/setting_item_margin_left_right"
                android:layout_marginRight="@dimen/setting_item_margin_left_right"
                android:drawableLeft="@mipmap/ic_agreement"
                android:drawableRight="@drawable/ic_chevron_right"
                android:drawablePadding="8dp"
                android:layout_marginTop="@dimen/setting_item_margin_top"
                android:textSize="15sp"
                android:textColor="#18191B"
                android:text="@string/third_party_data_sharing_list"/>
            <TextView
                android:id="@+id/user_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/setting_item_margin_left_right"
                android:layout_marginRight="@dimen/setting_item_margin_left_right"
                android:drawableLeft="@mipmap/ic_privacy"
                android:drawableRight="@drawable/ic_chevron_right"
                android:drawablePadding="8dp"
                android:layout_marginTop="@dimen/setting_item_margin_top"
                android:textSize="15sp"
                android:textColor="#18191B"
                android:text="@string/privacy_policy"/>

            <TextView
                android:id="@+id/user_sign_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/setting_item_margin_left_right"
                android:layout_marginRight="@dimen/setting_item_margin_left_right"
                android:drawableLeft="@mipmap/ic_logout"
                android:drawablePadding="8dp"
                android:layout_marginTop="@dimen/setting_item_margin_top"
                android:textSize="15sp"
                android:textColor="#18191B"
                android:text="@string/sign_out"/>
            <TextView
                android:id="@+id/deactivate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/setting_item_margin_left_right"
                android:layout_marginRight="@dimen/setting_item_margin_left_right"
                android:drawableLeft="@mipmap/ic_deactivate"
                android:drawablePadding="8dp"
                android:layout_marginTop="@dimen/setting_item_margin_top"
                android:layout_marginBottom="30dp"
                android:textSize="15sp"
                android:textColor="#18191B"
                android:text="@string/logout"/>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/powered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered_by_agora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/version"
        android:textSize="13sp"
        android:textColor="#2E18191B"
        />
    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:textSize="13sp"
        android:textColor="#2E18191B"
        />

</androidx.constraintlayout.widget.ConstraintLayout>